[package]
name = "hotsax"
description = "An implementation of the HOTSAX and HOTSAX based discord discovery algorithms."
version = "0.4.0"
authors = ["ENBYSS"]
license = "MPL-2.0"
keywords = ["analysis", "data", "anomalies", "ai"]
edition = "2018"
readme = "README.md"
categories = ["algorithms"]
maintenance = { status = "passively-maintained" }

[dependencies]
num = "0.2.1"
lazy_static = "1.4.0"
rand = "0.7.3"

# Used to validate the discord discovery
[dev-dependencies]
csv = "1.1.3"
plotly = "0.4.0"

